; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/gp2x/extr_emu.c_EmuScanEnd16_rot.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/gp2x/extr_emu.c_EmuScanEnd16_rot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32* }

@g_screen_ptr = common dso_local global i32 0, align 4
@rot_buff = common dso_local global i32 0, align 4
@Pico = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@PicoOpt = common dso_local global i32 0, align 4
@POPT_EN_SOFTSCALE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @EmuScanEnd16_rot to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @EmuScanEnd16_rot(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = and i32 %4, 3
  %6 = icmp ne i32 %5, 3
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %28

8:                                                ; preds = %1
  %9 = load i32, i32* @g_screen_ptr, align 4
  %10 = load i32, i32* @rot_buff, align 4
  %11 = load i32, i32* %3, align 4
  %12 = add i32 %11, 1
  %13 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @Pico, i32 0, i32 0, i32 0), align 8
  %14 = getelementptr inbounds i32, i32* %13, i64 12
  %15 = load i32, i32* %14, align 4
  %16 = and i32 %15, 1
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %24, label %18

18:                                               ; preds = %8
  %19 = load i32, i32* @PicoOpt, align 4
  %20 = load i32, i32* @POPT_EN_SOFTSCALE, align 4
  %21 = and i32 %19, %20
  %22 = icmp ne i32 %21, 0
  %23 = xor i1 %22, true
  br label %24

24:                                               ; preds = %18, %8
  %25 = phi i1 [ false, %8 ], [ %23, %18 ]
  %26 = zext i1 %25 to i32
  %27 = call i32 @rotated_blit16(i32 %9, i32 %10, i32 %12, i32 %26)
  store i32 0, i32* %2, align 4
  br label %28

28:                                               ; preds = %24, %7
  %29 = load i32, i32* %2, align 4
  ret i32 %29
}

declare dso_local i32 @rotated_blit16(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
